fix scrollbar-y on moz

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -125,7 +125,10 @@
 }
 // Скрыть скролл
 %hidescroll {
+	scrollbar-width: none;
 	&::-webkit-scrollbar {
 		display: none;
+		width: 0;
+		height: 0;
 	}
 }
